[project]
name = "selenium-tool"
version = "0.1.0"
requires-python = ">=3.11"
description = "A tool for selenium"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name="Akira Kobori", email="private.beats@gmail.com" },
]
dependencies = [
    "selenium>=4.11.2",
    "python-dateutil>=2.8.2",
    "requests>=2.31.0",
]

# 以下は開発用の設定(Ruff)

[tool.ruff]
target-version = "py311" # Pythonのバージョンを指定
fix = true               # 自動修正を有効にする
indent-width = 4         # インデントの幅を指定
src = ["src"]

line-length = 120

[tool.ruff.pydocstyle]
convention = "google" # docstringの形式を指定

# 以下はビルド用の設定

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
